# LangChain_Enterprise_Dashboard

./: .coverage  .dockerignore  .github-pages-deploy  .gitignore  APP_READY_FOR_DEMO.md  APP_RUNNING.md  APP_STARTUP_VERIFIED.md  BUILD_FIXES.md  BUILD_STATUS.md  CODE_QUALITY_FIXES.md  CODE_QUALITY_IMPROVEMENTS.md  CODE_UNDERSTANDING_GUIDE.md  COMPLETE_FEATURES_LIST.md  CONSOLE_ERRORS_FIXED.md  DATASETS_SHOWCASE.md  DEPLOYMENT.md  Dockerfile  EMPLOYER_SHOWCASE.md  ENHANCEMENTS_SUMMARY.md  ERROR_FIXES.md  FINAL_STATUS.md  FINQUERY_SKILLS_MATCH.md  GITHUB_PAGES_SETUP.md  GIT_CLEANUP_GUIDE.md  INSTALL.md  MIGRATION_SUMMARY.md  MODEL_MANAGEMENT_FEATURES.md  PROJECT_SHOWCASE.md  PYTHON313_COMPATIBILITY.md  PYTHON_VERSION_FIX.md  QUICK_FIX.md  QUICK_START.md  README.md  README_MLOPS.md  README_NEXTJS.md  SETUP_COMPLETE.md  SETUP_PYTHON312.md  SKILLS_GAP_ANALYSIS.md  STARTUP_SUCCESS.md  STREAMLIT_FIXES_COMPLETE.md  (+49 more)
.github/workflows/: ci-cd-simple.yml  ci-cd.yml.backup  deploy-gh-pages.yml  mlops-pipeline.yml
app/: globals.css  layout.tsx  page.tsx
components/: AnalyticsDashboard.tsx  DashboardSkeleton.tsx  DashboardTabs.tsx  DataGenerator.tsx  DataTable.tsx  EnterpriseDemo.tsx  FeatureCards.tsx  HelpGuide.tsx  HeroSection.tsx  MetricCard.tsx  Sidebar.tsx  StatsGrid.tsx  Tour.tsx
components/charts/: BarChartCard.tsx  ChartCard.tsx  ChartDefs.tsx  TimeSeriesChartCard.tsx
components/pages/: ABTestingPage.tsx  AnalyticsPage.tsx  AutoMLPage.tsx  DatasetsPage.tsx  DemoPage.tsx  EnsemblingPage.tsx  ExperimentsPage.tsx  FineTuningPage.tsx  LangChainPage.tsx  MonitoringPage.tsx  MultiAgentPage.tsx  ProfilingPage.tsx  RAGPage.tsx  RegistryPage.tsx  StatisticsPage.tsx  TimeSeriesPage.tsx  ToolsPage.tsx  WelcomePage.tsx
database/: __init__.py  adapters.py  connection_manager.py  models.py
datasets/: README.md  __init__.py  loaders.py  train_models.py
deployment/kubernetes/: deployment.yaml
docs/: DATASETS_SHOWCASE.md  EMPLOYER_SHOWCASE.md  EXPERT_CODE_IMPROVEMENTS.md  INTEGRATION_GUIDE.md  INTERVIEW_PREP.md  JOB_REQUIREMENTS_IMPLEMENTATION.md  MLOPS_FEATURES.md  ORGANIZATION_SUMMARY.md  PROJECT_SHOWCASE.md  QUICK_DEMO_GUIDE.md  README.md  README_NEXTJS.md  WHAT_IS_REAL.md
docs/guides/: IMPROVEMENTS.md  QUICK_EXPLANATION_GUIDE.md
docs/reference/: ARCHITECTURE_DIAGRAM.md  ARCHITECTURE_EXPLANATION.md  CODE_QUICK_REFERENCE.md  CODE_UNDERSTANDING_GUIDE.md  MIGRATION_SUMMARY.md
docs/setup/: DEPLOYMENT.md  FIX_PAGES_SETTINGS.md  GITHUB_PAGES_SETUP.md
examples/: aws_bedrock_example.py  context_engineering_example.py  document_processing_example.py  finetuning_example.py  model_serving_example.py
experiments/: experiment_tracking.db
kubernetes/: deployment.yaml
lib/: DataContext.tsx  TourContext.tsx  ab-testing.ts  demo-data-generator.ts  experiment-tracking.ts  llm-fine-tuning.ts  persistence.ts  tour-steps.ts  utils.ts
ml_datasets/: README.md  loaders.py  train_models.py
ml_datasets/data/: .gitkeep
monitoring/: prometheus.yml
nginx/: nginx.conf
tests/: __init__.py  conftest.py  load_test.py  test_agents.py  test_comprehensive.py  test_core_modules.py  test_database.py  test_database_adapters.py  test_database_integration.py  test_enterprise_features.py  test_integration.py  test_production_ready.py  test_rag.py  test_setup_correct_python.py
