[project]
name = "langchain-enterprise-workbench"
version = "2.0.0"
description = "Enterprise-grade LangChain AI Workbench with MLOps capabilities"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["langchain", "ai", "mlops", "llm", "rag", "machine-learning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "langchain>=0.1.0",
    "langchain-experimental>=0.0.50",
    "langchain-community>=0.0.20",
    "langchain-openai>=0.0.5",
    "langchain-chroma>=0.1.0",
    "langchain-huggingface>=0.0.1",
    "openai>=1.0.0",
    "streamlit>=1.28.0",
    "faiss-cpu>=1.7.4",
    "chromadb>=0.4.0",
    "python-dotenv>=1.0.0",
    "serpapi>=0.1.5",
    "plotly>=5.17.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "PyPDF2>=3.0.0",
    "python-docx>=1.0.0",
    "pillow>=10.0.0",
    "sentence-transformers>=2.2.0",
    "tiktoken>=0.5.0",
    "sqlalchemy>=2.0.0",
    "transformers>=4.35.0",
    "torch>=2.1.0",
    "scipy>=1.11.0",
    "joblib>=1.3.0",
    "scikit-learn>=1.3.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "redis>=5.0.0",
    "prometheus-client>=0.19.0",
    "python-multipart>=0.0.6",
    "psutil>=5.9.0",
    "loguru>=0.7.0",
    "structlog>=23.1.0",
    "cryptography>=41.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "aiofiles>=23.2.1",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "locust>=2.17.0",
    "gunicorn>=21.2.0",
    "boto3>=1.28.0",
    "botocore>=1.31.0",
    "pdfplumber>=0.10.0",
    "pytesseract>=0.3.10",
    "unstructured>=0.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "pre-commit>=3.5.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/langchain-enterprise-workbench"
Documentation = "https://github.com/yourusername/langchain-enterprise-workbench#readme"
Repository = "https://github.com/yourusername/langchain-enterprise-workbench"
Issues = "https://github.com/yourusername/langchain-enterprise-workbench/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=. --cov-report=html --cov-report=term"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

